# EssentialTraining

./: .clang-format  .gitignore  README.md
CppStandardTemplateLibrary/: README.md
DesignPatterns/: README.md
DesignPatterns/BehavioralPatterns/Strategy/: ModulationStrategies.hpp  ModulationStrategy.hpp  NRDownlinkScheduler.hpp  README.md  main.cpp  strategy  strategy_functional.cpp  strategy_functional_user_choice.cpp
EssentialTechniques/: README.md
Exercise_Files/Chap02/: statement.cpp  variables.cpp  working.cpp
Exercise_Files/Chap03/: for.cpp  func.cpp
Exercise_Files/Chap04/: 04-solution.cpp  array.cpp  struct.cpp
Exercise_Files/Chap05/: pointer-incr.cpp
Exercise_Files/Chap06/: 06-solution.cpp  func.cpp
Exercise_Files/Chap07/: constructors.cpp  struct-class.cpp
Exercise_Files/Chap09/: format.cpp  vector.cpp
Exercises/GoldenSequence/: GoldenSequence.cpp
Exercises/LogicIPuzzle/: LogicIPuzzle.cpp
HackerRank/AbstractClasses-Polymorphism/: Cache.hpp  solutionA  solutionA.cpp
MemoryManagement/: Comunication.cpp  MemoryManager.cpp  MemoryManager.hpp  integration.cpp  main.cpp
StateMachine/FiniteStateMachine_FSM/Event-DrivenStateMachine/improved/: CMakeLists.txt  NOPState.cpp  NOPState.hpp  PNOState.cpp  PNOState.hpp  POState.cpp  POState.hpp  PWTState.cpp  PWTState.hpp  README.md  State.hpp  StateMachine.cpp  StateMachine.hpp  events.txt  main.cpp
StateMachine/FiniteStateMachine_FSM/Event-DrivenStateMachine/improved/tests/: StateMachineTest.cpp
UT/FanProject/: CMakeLists.txt  TemperatureController.cpp  ut.cpp
working/: working.cpp
(+31 files in other folders)
